# wiki-art

./: .gitignore  pyproject.toml  train_clip.py  train_flow_match.py  train_mask.py
configs/: clip.yaml  flow-match.yaml  mask-unet.yaml
src/: config.py  data.py  loss.py  sample.py  train.py
src/model/: __init__.py  clip.py  conv.py  util.py
